few test pages added

--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
 <body>
 	<div class="relative">
 		<div class="sticky top-0 h-screen flex flex-col items-center justify-center bg-green-400 text-white">
-			<h2 class="text-4xl">Я</h2>
+			<h2 class="text-4xl">1</h2>
 		</div>
 		<div class="sticky top-0 h-screen flex flex-col items-center justify-center bg-indigo-600 text-white">
-			<h2 class="text-4xl">люблю</h2>
+			<h2 class="text-4xl">2</h2>
 		</div>
 		<div class="sticky top-0 h-screen flex flex-col items-center justify-center bg-purple-600 text-white">
-			<h2 class="text-4xl">Ксюшу</h2>
+			<a href="/tabs.html">
+				<h2 class="text-4xl">3</h2>
+			</a>
 		</div>
 		<div class="sticky top-0 h-screen flex flex-col items-center justify-center bg-neutral-800 text-white">
-			<h2 class="text-4xl">Бондаренко</h2>
+			<h2 class="text-4xl">4</h2>
 		</div>
 	</div>
 </body>
