--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
 <body>
 	<div class="relative">
 		<div class="sticky top-0 h-screen flex flex-col items-center justify-center bg-green-400 text-white">
-			<a href="green.html">
+			<a href="./green.html">
 				<h2 class="text-4xl">1</h2>
 			</a>
 		</div>
 		<div class="sticky top-0 h-screen flex flex-col items-center justify-center bg-indigo-600 text-white">
-			<a href="indigo.html">
+			<a href="./indigo.html">
 				<h2 class="text-4xl">2</h2>
 			</a>
 		</div>
 		<div class="sticky top-0 h-screen flex flex-col items-center justify-center bg-purple-600 text-white">
-			<a href="purple.html">
+			<a href="./purple.html">
 				<h2 class="text-4xl">3</h2>
 			</a>
 		</div>
 		<div class="sticky top-0 h-screen flex flex-col items-center justify-center bg-neutral-800 text-white">
-			<a href="neutral.html">
+			<a href="./neutral.html">
 				<h2 class="text-4xl">4</h2>
 			</a>
 		</div>
