--- a/purple.html
+++ b/purple.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="sticky top-0 h-screen flex flex-col items-center justify-center bg-purple-600 text-white">
-		<h2 class="text-4xl">3</h2>
+		<h2 class="text-4xl font-bold">purple</h2>
 	</div>
 </body>
 </html>
