--- a/green.html
+++ b/green.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="sticky top-0 h-screen flex flex-col items-center justify-center bg-green-400 text-white">
-		<h2 class="text-4xl">1</h2>
+		<h2 class="text-4xl font-bold">green</h2>
 	</div>
 </body>
 </html>
