--- a/indigo.html
+++ b/indigo.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="sticky top-0 h-screen flex flex-col items-center justify-center bg-indigo-600 text-white">
-		<h2 class="text-4xl">2</h2>
+		<h2 class="text-4xl font-bold">indigo</h2>
 	</div>
 </body>
 </html>
