--- a/neutral.html
+++ b/neutral.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="sticky top-0 h-screen flex flex-col items-center justify-center bg-neutral-800 text-white">
-		<h2 class="text-4xl">4</h2>
+		<h2 class="text-4xl font-bold">neutral</h2>
 	</div>
 </body>
 </html>
