--- a/language.html
+++ b/language.html
@@ -5,16 +5,16 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
 	<script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-	<title>Home</title>
+	<title>Language</title>
 </head>
 <body class="flex flex-col">
 	<header class="grid grid-cols-12 py-5 shadow-lg">
 		<div class="col-span-2 text-center"></div>
 		<nav class="flex col-span-6">
-			<a href="./index.html" class="pr-3 text-blue-600">Home</a>
+			<a href="./index.html" class="pr-3 hover:underline">Home</a>
 			<a href="./accomodation.html" class="pr-3 hover:underline">Accomodation</a>
 			<a href="./food.html" class="pr-3 hover:underline">Food</a>
-			<a href="./language.html" class="pr-3 hover:underline">Language</a>
+			<a href="./language.html" class="pr-3 text-blue-600">Language</a>
 			<a href="./transport.html" class="pr-3 hover:underline">Transport</a>
 		</nav>
 		<span class="col-span-2 font-serif text-lg text-right underline" style="font-family: Rubik Mono One;">
