--- a/food.html
+++ b/food.html
@@ -7,8 +7,9 @@
 	<script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
 	<title>Food</title>
 </head>
-<body class="flex flex-col">
-	<header class="grid grid-cols-12 py-5 shadow-lg">
+<body class="flex flex-col h-screen justify-between">
+	<!-- Header -->
+	<header class="grid grid-cols-12 py-5 shadow-lg bg-slate-300">
 		<div class="col-span-2 text-center"></div>
 		<nav class="flex col-span-6">
 			<a href="./index.html" class="pr-3 hover:underline">Home</a>
@@ -23,7 +24,8 @@
 		<div class="col-span-2 text-center"></div>
 	</header>
 
-	<div class="grid grid-cols-12 shadow-lg">
+	<!-- Main body -->
+	<div class="grid mb-auto grid-cols-12 shadow-lg">
 		<div class="col-span-2 text-center"></div>
 		<div class="col-span-8 text-center bg-black">
 			<img src="./img/kotofei2.jpg" class="object-fill">
@@ -31,7 +33,8 @@
 		<div class="col-span-2 text-center"></div>
 	</div>
 
-	<footer class="grid grid-cols-12 shadow-lg py-5">
+	<!-- Footer -->
+	<footer class="grid grid-cols-12 shadow-lg py-5 bg-slate-300">
 		<div class="col-span-2"></div>
 		<div class="col-span-8">
 			<a href="#" class="pr-3 hover:underline hover:text-blue-500">About</a>
