--- a/accomodation.html
+++ b/accomodation.html
@@ -11,18 +11,18 @@
 	
 	<!-- Header -->
 	<header class="grid grid-cols-12 py-5 shadow-lg bg-stone-300">
-		<div class="col-span-2 text-center"></div>
+		<div class="col-span-2"></div>
 		<nav class="flex col-span-6">
-			<a href="./index.html" class="pr-3 hover:underline">Home</a>
-			<a href="./accomodation.html" class="pr-3 text-blue-600">Accomodation</a>
-			<a href="./food.html" class="pr-3 hover:underline">Food</a>
-			<a href="./language.html" class="pr-3 hover:underline">Language</a>
-			<a href="./transport.html" class="pr-3 hover:underline">Transport</a>
+			<a href="./index.html" class="text-xl pr-3 hover:underline">Home</a>
+			<a href="./accomodation.html" class="text-xl pr-3 text-blue-600">Accomodation</a>
+			<a href="./food.html" class="text-xl pr-3 hover:underline">Food</a>
+			<a href="./language.html" class="text-xl pr-3 hover:underline">Language</a>
+			<a href="./transport.html" class="text-xl pr-3 hover:underline">Transport</a>
 		</nav>
-		<span class="col-span-2 font-serif text-lg text-right underline" style="font-family: Rubik Mono One;">
+		<span class="col-span-2 font-serif text-xl text-right underline" style="font-family: Rubik Mono One;">
 			MY-FINLAND.com
 		</span>
-		<div class="col-span-2 text-center"></div>
+		<div class="col-span-2"></div>
 	</header>
 
 	<!-- Main body -->
@@ -31,7 +31,7 @@
 		<div class="col-span-8 text-center flex flex-col">
 			
 			<div class="shadow-lg bg-white rounded-lg mt-7 mb-3">
-				<h1 class="font-bold text-3xl my-4">Accomodation in Finland</h1>
+				<h1 class="font-bold text-2xl my-4">Accomodation in Finland</h1>
 				<p class="text-xl mb-5">There are a wide range of accommodation choices available in Finland, from the usual hotels, hostels and Bed & Breakfast, or the more rustic log cabins by lakesides and farmstays in the countryside, to the very unusual chance to spend your nights in a Igloo Hotel or beneath the stars and northern lights in a glass igloo!</p>
 			</div>
 
