getting to finland

--- a/transport.html
+++ b/transport.html
@@ -31,6 +31,11 @@
 		<div class="col-span-8">
 
 			<div class="text-center flex flex-col shadow-lg rounded-lg bg-white mt-7 mb-3 p-3 items-center">
+				<h1 class="font-bold text-2xl">Getting to Finland</h1>
+				<p class="text-base">You can fly, cruise or drive. The train is also an option if you’re coming via St. Petersburg, Russia.</p>
+			</div>
+
+			<div class="text-center flex flex-col shadow-lg rounded-lg bg-white mt-12 mb-3 p-3 items-center">
 				<h1 class="font-bold text-2xl">Public transportation</h1>
 				<p class="text-base">Finland has excellent public transport, both locally and nationally. Trains are modern and comfortable, and usually on time – even during the worst of the winter weather. The entire country is linked by a comprehensive bus and rail network.</p>
 			</div>
